ch14 - refactor web, rework bot design

--- a/server/web/ch14_m3_xss2sqli/flaskr/templates/base.html
+++ b/server/web/ch14_m3_xss2sqli/flaskr/templates/base.html
@@ -17,9 +17,8 @@
 <nav>
   <ul>
       <li><a href="{{ url_for('index') }}">Main page</a>
-      <li><a href="{{ url_for('blog.history') }}">History</a>
-      <li><a href="{{ url_for('blog.search') }}">Search</a>
-      <li><a href="{{ url_for('admin.index') }}">Admin</a>
+      <li><a href="{{ url_for('blog.post') }}">Your post</a>
+      <li><a href="{{ url_for('blog.view') }}">View</a>
   </ul>
 </nav>
 <section class="content">
