--- a/server/web/ch14_m3_xss2sqli/flaskr/static/style.css
+++ b/server/web/ch14_m3_xss2sqli/flaskr/static/style.css
@@ -99,6 +99,8 @@ nav ul li a, nav ul li span, header .action {
 .post .about {
   color: slategray;
   font-style: italic;
+  display: block;
+  margin-top: 4px;
 }
 
 .post .body {
@@ -153,4 +155,8 @@ input[type=submit] {
 
 .read_noti {
   color: red;
+}
+
+.input {
+  color: grey;
 }
